<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_dialog_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.41"
            android:background="@drawable/gradient_background"
            android:elevation="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_trendyol_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dialog_text"
                android:textColor="@color/white" />

        </LinearLayout>


        <View
            android:id="@+id/ll_dialog_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.59">


        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_background_3"
        android:elevation="12dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:lines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:endIconDrawable="@drawable/password_toggle"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="14sp"
                android:lines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@color/pumpkin"
            android:textSize="13sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acb_FragmentAccount_SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:background="@drawable/custom_background_2"
            android:text="GİRİŞ YAP"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:itemRippleColor="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.46"
                android:background="@drawable/custom_background_4"
                android:elevation="2dp"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/connect_with_facebook"
                    android:textColor="@color/gray" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.04" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.46"
                android:background="@drawable/custom_background_4"
                android:elevation="2dp"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="@string/connect_with_google" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"/>

    </LinearLayout>


</FrameLayout>